Fix: [수정] 가로 스크롤이 생기는 문제 .scroll에서 overflow-x: hidden 적용함
Refs: #33

--- a/src/features/auth-email/ui/components/ScreenPersonalInfo/ScreenPersonalInfo.module.css
+++ b/src/features/auth-email/ui/components/ScreenPersonalInfo/ScreenPersonalInfo.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  height: 35rem;
+  height: 36rem;
 }
 
 .personal__info__screen__body {
